--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
     "version": "1.0.0",
     "author": "Andreas Arvidsson",
     "license": "MIT",
-    "main": "index.js",
+    "main": "index.ts",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/AndreasArvidsson/video-editing-tools"
+    },
+    "sponsor": {
+        "url": "https://github.com/sponsors/AndreasArvidsson"
+    },
+    "funding": "https://github.com/sponsors/AndreasArvidsson",
     "scripts": {
         "start": "tsx index.ts"
     },
     "devDependencies": {
-        "@types/node": "20.14.2"
+        "@types/node": "20.14.2",
+        "tsx": "4.15.5"
     }
 }
